--- a/view/html/main.html
+++ b/view/html/main.html
@@ -24,7 +24,8 @@
         }
 
         .file-hidden {
-            filter: blur(25px);
+            filter: blur(5px);
+            -webkit-filter: blur(5px);
         }
     </style>
 
